--- a/css/screen.css
+++ b/css/screen.css
@@ -22,7 +22,6 @@ h1 {
   line-height: 1.9em;
   text-align: center;
 }
-}
 input {
   border-color: #E07A5F;
 }
@@ -30,9 +29,13 @@ alert {
   color: #E07A5F;
 }
 p {
-  padding: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   font-size: 1.75em;
-  text-align: center;
+  text-align: left;
+}
+#birthgroup {
+  padding-bottom: 1.2em;
 }
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 901px) {
@@ -49,13 +52,16 @@ p {
   }
   html {
     background-color: #81B29A;
+    font-size: 1.2em;
   }
   #submitgroup input {
     background-color: #F4F1DE;
     color: #E07A5F;
+    display: block;
+    float: right;
   }
   p {
-    font-size: 1.2em;
+    font-size: 1.4em;
   }
 }
 @media (max-width: 900px) and (min-width: 1px) {
@@ -71,8 +77,9 @@ p {
   }
   html {
     background-color: #81B29A;
+    font-size: 1.2em;
   }
   p {
-    font-size: 1.2em;
+    font-size: 1.4em;
   }
 }
