add more whitespace

--- a/css/screen.css
+++ b/css/screen.css
@@ -38,7 +38,11 @@ p {
   padding-bottom: 1.2em;
 }
 #submit {
-  background-color: #81B29A
+  background-color: #81B29A;
+  padding: 0.25em;
+}
+label {
+  padding-bottom: 1em;
 }
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 901px) {
