--- a/css/screen.css
+++ b/css/screen.css
@@ -38,11 +38,20 @@ p {
   padding-bottom: 1.2em;
 }
 #submit {
-  background-color: #81B29A;
   padding: 0.25em;
 }
 label {
   padding-bottom: 1em;
+}
+footer {
+  background-color: #81B29A;
+}
+a {
+  color: E07A5F;
+}
+h3, h4 {
+  font-size: 1em;
+  font-style: italic;
 }
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 901px) {
@@ -65,8 +74,15 @@ label {
   p {
     font-size: 1.4em;
   }
-  #submit {
+  footer {
     background-color: #81B29A;
+  }
+  a {
+    color: E07A5F;
+  }
+  h3, h4 {
+    font-size: 1em;
+    font-style: italic;
   }
 }
 @media (max-width: 900px) and (min-width: 1px) {
@@ -75,6 +91,7 @@ label {
     background-color: #F4F1DE;
     text-decoration: underline;
     display: grid;
+    line-height: 1.9em;
   }
   main {
     width: 75%;
@@ -88,7 +105,14 @@ label {
   p {
     font-size: 1.4em;
   }
-  #submit {
+  footer {
     background-color: #F4F1DE;
+  }
+  a {
+    color: E07A5F;
+  }
+  h3, h4 {
+    font-size: 1em;
+    font-style: italic;
   }
 }
