--- a/css/screen.css
+++ b/css/screen.css
@@ -50,6 +50,7 @@ footer {
   bottom: 0;
   padding: 0.5em;
   width: 1000px;
+  margin: auto;
 }
 a {
   color: E07A5F;
@@ -58,6 +59,9 @@ h3, h4 {
   font-size: 1em;
   font-style: italic;
   padding: 0.25;
+}
+h4 {
+  color: E07A5F;
 }
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 901px) {
