--- a/css/screen.css
+++ b/css/screen.css
@@ -49,8 +49,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-}
-a {
+  margin: 0;
   color: #E07A5F;
 }
 h3, h4 {
@@ -84,7 +83,7 @@ h4 {
     font-size: 1.4em;
   }
   footer {
-    background-color: #81B29A;
+    background-color: #F4F1DE;
     width: 100%;
   }
   h3, h4 {
