--- a/css/screen.css
+++ b/css/screen.css
@@ -46,10 +46,9 @@ label {
 }
 footer {
   background-color: #81B29A;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   margin: 0;
+  display: grid;
 }
 a {
   color: #E07A5F;
@@ -64,8 +63,11 @@ h3 {
   padding: 0.25em;
   padding-left: 1.5em;
 }
+input {
+  float: right;
+}
 /* media queries*/
-@media (max-width: 1200px) and (min-width: 901px) {
+@media (max-width: 1200px) and (min-width: 601px) {
   h1 {
     font-size: 2em;
     text-decoration: underline;
@@ -94,7 +96,7 @@ h3 {
     font-style: italic;
   }
 }
-@media (max-width: 900px) and (min-width: 1px) {
+@media (max-width: 600px) and (min-width: 1px) {
   h1 {
     font-size: 2em;
     background-color: #F4F1DE;
@@ -103,7 +105,7 @@ h3 {
     line-height: 1.9em;
   }
   main {
-    width: 75%;
+    width: calc(100% - 15px);
     display: grid;
     padding: 1.2em;
   }
@@ -121,5 +123,17 @@ h3 {
   h3 {
     font-size: 1em;
     font-style: italic;
+  }
+  #submit-input input {
+    width: 8px;
+    height: 7px;
+  }
+  label {
+    font-size: 1.05em;
+    width: fit-content;
+    display: block;
+  }
+  input {
+    margin: 0.25em 0;
   }
 }
