--- a/css/screen.css
+++ b/css/screen.css
@@ -48,11 +48,17 @@ p {
   align-self: start;
   justify-self: left;
 }
+#firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+  display: inline-block;
+  grid-column: 1 / 3;
+  align-self: start;
+  justify-self: left;
+}
 form {
   display: grid;
   justify-items: end;
   grid-template-columns: 1fr 1fr 1fr;
-  align-items: center;
+  align-items: top;
 }
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 600px) {
@@ -97,6 +103,18 @@ form {
   }
   input {
     display: block;  
+  }
+  #submit {
+    display: block;
+  }
+  #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
+    display: block;
+  }
+  form {
+    display: block;
+  }
+  #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+    display: block;
   }
 }
 @media (max-width: 600px) and (min-width: 1px) {
@@ -147,5 +165,17 @@ form {
   }
   input {
     display: block;  
+  }
+  #submit {
+    display: block;
+  }
+  #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
+    display: block;
+  }
+  form {
+    display: block;
+  }
+  #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+    display: block;
   }
 }
