--- a/css/screen.css
+++ b/css/screen.css
@@ -38,9 +38,9 @@ p {
   padding-bottom: 1.2em;
 }
 #submit {
-  padding: 0.25em;
-  grid-column: 3 / 3;
-  align-self: start;
+  display: block;
+  float: right;
+  margin-top: 10px;
 }
 #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
   display: inline-block;
@@ -53,6 +53,7 @@ p {
   grid-column: 1 / 3;
   align-self: start;
   justify-self: left;
+  padding-top: 10px;
 }
 form {
   display: grid;
@@ -63,7 +64,7 @@ form {
 /* media queries*/
 @media (max-width: 1200px) and (min-width: 600px) {
   h1 {
-    font-size: 2em;
+    font-size: 2.5em;
     text-decoration: underline;
     display: grid;
   }
@@ -73,10 +74,11 @@ form {
   }
   html {
     background-color: #81B29A;
-    font-size: 1.2em;
+    font-size: 1.4em;
   }
   p {
-    font-size: 1.4em;
+    font-size: 1.6em;
+    line-height: 1.2em;
   }
   #firstName {
     padding-bottom: 10px;
@@ -104,9 +106,6 @@ form {
   input {
     display: block;  
   }
-  #submit {
-    display: block;
-  }
   #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
     display: block;
   }
@@ -117,7 +116,7 @@ form {
     display: block;
   }
 }
-@media (max-width: 600px) and (min-width: 1px) {
+@media (max-width: 600px) {
   h1 {
     font-size: 2em;
     background-color: #F4F1DE;
@@ -165,9 +164,6 @@ form {
   }
   input {
     display: block;  
-  }
-  #submit {
-    display: block;
   }
   #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
     display: block;
