--- a/css/screen.css
+++ b/css/screen.css
@@ -68,6 +68,7 @@ form {
     text-decoration: underline;
     display: grid;
     line-height: 1.7em;
+    background-color: #ebb1a2;
   }
   main {
     width: 90%;
@@ -115,6 +116,9 @@ form {
   }
   #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
     display: block;
+  }
+  #submit {
+    margin-top: 2em;
   }
 }
 @media (max-width: 600px) {
@@ -175,5 +179,8 @@ form {
   }
   #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
     display: block;
+  }
+  #submit {
+    margin-top: 2em;
   }
 }
