test css change

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,67 +1,70 @@
-html {
+/* media queries*/
+h1 {
+  font-size: 2em;
   background-color: #F4F1DE;
-  color: #3D405B;
+  text-decoration: underline;
+  display: grid;
+  line-height: 1.8em;
+}
+main {
+  width: 80%;
+  padding: 1.2em;
+}
+html {
+  background-color: #81B29A;
+  font-size: 1.2em;
   font-family: 'Fanwood Text', Georgia, Garamond, serif;
-  font-size: 1.4em; 
   line-height: 1.2em; 
   padding: 1.2em; 
   text-rendering: optimizeLegibility;
 }
-main {
-  width: 1000px;
-  margin: auto;
-  text-align: left;
-  display: block;
-  flex-wrap: nowrap;
-  padding: 1.2em;
-}
-h1 {
-  display: block;
-  background-color: #81B29A;
-  font-size: 3em;
-  padding: 0.75em;
-  text-align: center;
-}
-input {
-  border-color: #E07A5F;
-}
-alert {
-  color: #E07A5F;
-}
 p {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  font-size: 1.75em;
-  text-align: left;
+  font-size: 1.4em;
+  line-height: 1.2em;
+}
+#submit-input input {
+  width: 8px;
+  height: 7px;
+}
+#firstName {
+  padding-bottom: 10px;
+  display: block;
+}
+#lastName {
+  padding-bottom: 10px;
+  display: block;
+}
+#emailgroup {
+  padding-bottom: 10px;
+  display: block;
+}
+#phonegroup {
+  padding-bottom: 10px;
+  display: block;
 }
 #birthgroup {
-  padding-bottom: 1.2em;
+  padding-bottom: 10px;
 }
-#submit {
+#submit-input {
+  padding-bottom: 10px;
   display: block;
-  float: right;
-  margin-top: 4em;
+}
+input {
+  display: block; 
+  width: 90%;
 }
 #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
-  display: inline-block;
-  grid-column: 2 / 3;
-  align-self: start;
-  justify-self: left;
-}
-#firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
-  display: inline-block;
-  grid-column: 1 / 3;
-  align-self: start;
-  justify-self: left;
-  padding-top: 20px;
+  display: block;
 }
 form {
-  display: grid;
-  justify-items: end;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-items: stretch;
+  display: block;
 }
-/* media queries*/
+#firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+  display: block;
+}
+#submit {
+  margin-top: 2em;
+}
 @media (min-width: 600px) {
   h1 {
     font-size: 2.5em;
@@ -77,37 +80,14 @@ form {
   html {
     background-color: #81B29A;
     font-size: 1.4em;
+    font-family: 'Fanwood Text', Georgia, Garamond, serif;
+    line-height: 1.2em; 
+    padding: 1.2em; 
+    text-rendering: optimizeLegibility;
   }
   p {
     font-size: 1.6em;
-    line-height: 1.2em;
-  }
-  #firstName {
-    padding-bottom: 10px;
-    display: block;
-  }
-  #lastName {
-    padding-bottom: 10px;
-    display: block;
-  }
-  #emailgroup {
-    padding-bottom: 10px;
-    display: block;
-  }
-  #phonegroup {
-    padding-bottom: 10px;
-    display: block;
-  }
-  #birthgroup {
-    padding-bottom: 10px;
-  }
-  #submit-input {
-    padding-bottom: 10px;
-    display: block;
-  }
-  input {
-    display: block; 
-    width: 90%;    
+    line-height: 1.2em; 
   }
   #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
     display: block;
@@ -121,32 +101,7 @@ form {
   #submit {
     margin-top: 2em;
   }
-}
-@media (min-width: 200px) {
-  h1 {
-    font-size: 2em;
-    background-color: #F4F1DE;
-    text-decoration: underline;
-    display: grid;
-    line-height: 1.8em;
-  }
-  main {
-    width: 80%;
-    padding: 1.2em;
-  }
-  html {
-    background-color: #81B29A;
-    font-size: 1.2em;
-  }
-  p {
-    font-size: 1.4em;
-    line-height: 1.2em;
-  }
-  #submit-input input {
-    width: 8px;
-    height: 7px;
-  }
-  #firstName {
+    #firstName {
     padding-bottom: 10px;
     display: block;
   }
@@ -173,16 +128,70 @@ form {
     display: block; 
     width: 90%;
   }
-  #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
-    display: block;
+}
+@media (min-width: 1200px){
+  html {
+    background-color: #F4F1DE;
+    color: #3D405B;
+    font-family: 'Fanwood Text', Georgia, Garamond, serif;
+    font-size: 1.4em; 
+    line-height: 1.2em; 
+    padding: 1.2em; 
+    text-rendering: optimizeLegibility;
   }
-  form {
+  main {
+    width: 1000px;
+    margin: auto;
+    text-align: left;
     display: block;
+    flex-wrap: nowrap;
+    padding: 1.2em;
   }
-  #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+  h1 {
     display: block;
+    background-color: #81B29A;
+    font-size: 3em;
+    padding: 0.75em;
+    text-align: center;
+  }
+  input {
+    border-color: #E07A5F;
+    width: 20 px; 
+  }
+  alert {
+    color: #E07A5F;
+  }
+  p {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 1.75em;
+    text-align: left;
+  }
+  #birthgroup {
+    padding-bottom: 1.2em;
   }
   #submit {
-    margin-top: 2em;
+    display: block;
+    float: right;
+    margin-top: 4em;
+  }
+  #firstName input, #lastName input, #birthgroup input, #emailgroup input, #phonegroup input {
+    display: inline-block;
+    grid-column: 2 / 3;
+    align-self: start;
+    justify-self: left;
+  }
+  #firstName label, #lastName label, #birthgroup label, #emailgroup label, #phonegroup label {
+    display: inline-block;
+    grid-column: 1 / 3;
+    align-self: start;
+    justify-self: left;
+    padding-top: 20px;
+  }
+  form {
+    display: grid;
+    justify-items: end;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: stretch;
   }
 }
