--- a/css/screen.css
+++ b/css/screen.css
@@ -5,6 +5,7 @@ h1 {
   text-decoration: underline;
   display: grid;
   line-height: 1.8em;
+  padding: 1em;
 }
 main {
   width: 80%;
@@ -21,6 +22,8 @@ html {
 p {
   font-size: 1.4em;
   line-height: 1.2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 #submit-input input {
   width: 8px;
@@ -72,6 +75,7 @@ form {
     display: grid;
     line-height: 1.7em;
     background-color: #ebb1a2;
+    padding: 1em;
   }
   main {
     width: 90%;
@@ -101,7 +105,7 @@ form {
   #submit {
     margin-top: 2em;
   }
-    #firstName {
+  #firstName {
     padding-bottom: 10px;
     display: block;
   }
@@ -123,6 +127,8 @@ form {
   #submit-input {
     padding-bottom: 10px;
     display: block;
+    line-height: 2em;
+    
   }
   input {
     display: block; 
